--- a/final/index_fin.html
+++ b/final/index_fin.html
@@ -114,7 +114,7 @@
 
   <!-- Footer -->
   <footer class="text-center py-6 text-sm text-gray-500">
-    &copy; 2025 Sree Hari. All rights reserved.
+    &copy; 2025 Sandeep S. All rights reserved.
   </footer>
 </body>
 
